fix issue 2783125:  horizontal alignment of hover menus.

--- a/src/site/templates/root/css/template.css
+++ b/src/site/templates/root/css/template.css
@@ -287,8 +287,9 @@
   display: block;
   position: absolute;
   z-index: 100;
-  width: 20ex;
-  left: -25%;
+  width: 22ex;
+  left: -11ex;
+  margin-left: 50%;
 }
 
 #rootTop .parent:last-child > ul {
