--- a/src/site/templates/root/css/template_ie_6.css
+++ b/src/site/templates/root/css/template_ie_6.css
@@ -35,8 +35,7 @@
 #rootHeader h1.logo { background-image: none; }
 #rootHeader h1.logo a {
    padding: 0;
-   margin-top: -12pt;
-   line-height: 60pt;
+   margin-top: 8pt;
 }
 /* disable top nav rather than engineer a separate solution for ie6 */
 #rootTop  {
