--- a/src/site/templates/root/css/template_ie_7.css
+++ b/src/site/templates/root/css/template_ie_7.css
@@ -16,7 +16,8 @@
 }
 
 #rootHeader h1.logo {
-	height: 50pt;
+	margin-top: -20pt;
+	height: 70pt;
 }
 
 #rootTop {
